--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,8 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/about">Sobre mi</a>
+		<a href="/blog">blog</a>
 		<h1>Mi sitio Astro</h1>
 	</body>
 </html>
