--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -11,5 +11,10 @@
         <a href="/about">Sobre mi</a>
         <h1>Mi blog de Astro aprendizaje</h1>
         <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
+        <ul>
+            <li><a href="/posts/post-1">Publicacion 1</a></li>
+            <li><a href="/posts/post-2">Publicacion 2</a></li>
+            <li><a href="/posts/post-3">Publicacion 3</a></li>
+        </ul>
     </body>
 </html>
